You have read that Muad'Dib had no playmates his own age on Caladan. The
dangers were too great. But Muad'Dib did have wonderful companion-teachers.
There was Gurney Halleck, the troubadour-warrior. You will sing some of
Gurney's songs, as you read along in this book. There was Thufir Hawat, the old
Mentat Master of Assassins, who struck fear even into the heart of the Padishah
Emperor. There were Duncan Idaho, the Swordmaster of the Ginaz; Dr. Wellington
Yueh, a name black in treachery but bright in knowledge; the Lady Jessica, who
guided her son in the Bene Gesserit Way, and -- of course -- the Duke Leto,
whose qualities as a father have long been overlooked.

  -- from "A Child's History of Muad'Dib" by the Princess Irulan
%
How do we approach the study of Muad'Dib's father? A man of surpassing warmth
and surprising coldness was the Duke Leto Atreides. Yet, many facts open the
way to this Duke: his abiding love for his Bene Gesserit lady; the dreams he
held for his son; the devotion with which men served him. You see him there --
a man snared by Destiny, a lonely figure with his light dimmed behind the glory
of his son. Still, one must ask: What is the son but an extension of the father?

  -- from "Muad'Dib, Family Commentaries" by the Princess Irulan
%
"There is probably no more terrible instant of enlightenment than the
one in which you discover your father is a man--with human flesh."

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
Greatness is a transitory experience. It is never consistent. It depends in
part upon the myth-making imagination of humankind. The person who experiences
greatness must have a feeling for the myth he is in. He must reflect what is
projected upon him. And he must have a strong sense of the sardonic. This is
what uncouples him from belief in his own pretensions. The sardonic is all that
permits him to move within himself. Without this quality, even occasional
greatness will destroy a man.

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
"There is no escape--we pay for the violence of our ancestors. "

  -- from "The Collected Sayings of Muad'Dib" by the Princess Irulan
%
There should be a science of discontent. People need hard times
and oppression to develop psychic muscles.

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
Arrakis teaches the attitude of the knife--chopping off what's
incomplete and saying: "Now, it's complete because it's ended here."

  -- from "Collected Sayings of, Muad'Dib" by the Princess Irulan
%
My father once told me that respect for the truth comes close to being the
basis for all morality. "Something cannot emerge from nothing," he said.
This is profound thinking if you understand how unstable "the truth" can be.

  -- from "Conversations with Muad'Dib" by the Princess Irulan
%

What do you despise? By this are you truly known.

  -- from "Manual of Muad'Dib" by the Princess Irulan
%
At the age of fifteen, he had already learned silence.

  -- from "A Child's History of Muad'Dib" by the Princess Irulan
%
The Fremen were supreme in that quality the ancients called
"spannungsbogen"--which is the self-imposed delay between desire for a thing
and the act of reaching out to grasp that thing.

  -- from "The Wisdom of Muad'Dib" by the Princess Irulan
%
The concept of progress acts as a protective mechanism
to shield us from the terrors of the future.

  -- from "Collected Sayings of Muad'Dib" by the Princess Irulan
%
Deep in the human unconscious is a pervasive need for a logical universe that
makes sense. But the real universe is always one step beyond logic.

  -- from "The Sayings of Muad'Dib" by the Princess Irulan
%
How often it is that the angry man rages denial of what his inner self is
telling him.

  -- "The Collected Sayings of Muad'Dib" by the Princess Irulan
%
